ghc-4335c07/testsuite/tests/parser/should_fail/ParserNoBinaryLiterals2.hs
{-# LANGUAGE MagicHash #-}

module ParserNoBinaryLiterals2 where

import GHC.Types

f :: Word -> ()
f (W# 0b0##) = ()
f _          = ()
